<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddEditPlaceFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_name_field"
        style="@style/AddEditTextCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_description_field"
        style="@style/AddEditTextCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name_field"
        tools:text="Description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        style="@style/AddEditTextCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_description_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_location"
        style="@style/AddEditTextCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_current_location"
        style="@style/CustomMargins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        app:layout_constraintStart_toStartOf="@id/til_location"
        app:layout_constraintTop_toBottomOf="@+id/til_location" />



    <Button
        android:id="@+id/button_see_on_map"
        style="@style/CustomMargins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_on_map"
        app:layout_constraintEnd_toEndOf="@id/til_location"
        app:layout_constraintTop_toBottomOf="@+id/til_location" />

    <FrameLayout
        android:id="@+id/frame_image"
        style="@style/CustomMargins"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/addedit_image_border"
        android:padding="3dp"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_current_location">

        <ImageView
            android:id="@+id/image_view_add_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/picture"
            android:src="@drawable/ic_placeholder" />
    </FrameLayout>

    <Button
        android:id="@+id/button_save"
        style="@style/CustomMargins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>